--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -3,7 +3,14 @@
   "app_name": "chalice-nakamura-sample",
   "stages": {
     "dev": {
-      "api_gateway_stage": "api"
+      "api_gateway_stage": "v1"
+    },
+    "stg": {
+      "api_gateway_stage": "v1"
+    },
+    "prd": {
+      "api_gateway_stage": "v1"
     }
-  }
+  },
+  "automatic_layer": true
 }
