--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@
         context: ./
         dockerfile: ./docker/chalice/Dockerfile
       platform: linux/amd64
-      tty: true
       volumes:
         - ./:/work
+      command: chalice local --autoreload --host 0.0.0.0 --port 8080
       ports:
         - "8080:8080"
     dynamodb-local:
@@ -23,7 +23,7 @@
       platform: linux/amd64
       image: aaronshaf/dynamodb-admin:4.4.0
       environment:
-        - DYNAMO_ENDPOINT=dynamodb-local:${DYNAMODB_LOCAL_PORT}
+        - DYNAMO_ENDPOINT=dynamodb-local:8000
         - AWS_REGION=ap-northeast-1
         - AWS_ACCESS_KEY_ID=aws_access_key_id
         - AWS_SECRET_ACCESS_KEY=aws_secret_access_key
